# CourseWork5-2.0

./: .gitignore  README.md  main.py  pyproject.toml
data/: database.ini
src/: DBManager.py  config.py  employer.py  filework.py  parser.py  vacancy.py
