[tool.poetry]
name = "coursework5-2-0"
version = "0.1.0"
description = ""
authors = ["dimapb"]
readme = "README.md"
packages = [{include = "coursework5_2"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
